# jack_midi_experiments

./: .gitignore  CMakeLists.txt  README.md  jack_echo.cc  jack_midi_stripe.cc  jack_midi_synth.cc  jack_midi_synth_app.cc  jack_midi_synth_app.h  jack_midi_synth_envelopes.cc  jack_midi_synth_envelopes.h  jack_midi_synth_events.h  jack_midi_synth_filters.cc  jack_midi_synth_filters.h  jack_midi_synth_logic.cc  jack_midi_synth_logic.h  jack_midi_synth_oscillators.cc  jack_midi_synth_oscillators.h  jack_midi_synth_sample.cc  jack_midi_synth_sample.h  jack_midi_synth_sample_manager.cc  jack_midi_synth_sample_manager.h  jack_midi_synth_voice.cc  jack_midi_synth_voice.h  jack_test.cc  jack_volca_fm.cc
